static/css/style.css
/**********************************/
/********** General CSS ***********/
/**********************************/
body {
    color: #000000;
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
    background: #ffffff;
}

a {
    color: #FF6F61;
    transition: 0.5s;
}

a:hover,
a:active,
a:focus {
    color: #000000;
    outline: none;
    text-decoration: none;
}

p {
    padding: 0;
    margin: 0 0 15px 0;
    color: #000000;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0 0 15px 0;
    padding: 0;
    color: #000000;
    font-weight: 600;
}

h4,
h5,
h6 {
    font-weight: 400;
}

.back-to-top {
    position: fixed;
    display: none;
    background: #FF6F61;
    color: #ffffff;
    width: 35px;
    height: 35px;
    text-align: center;
    line-height: 1;
    font-size: 16px;
    right: 15px;
    bottom: 15px;
    transition: background 0.5s;
    border-radius: 4px;
    z-index: 11;
}

.back-to-top:hover {
    background: #000000;
}

.back-to-top i {
    padding-top: 9px;
    color: #ffffff;
}


/**********************************/
/********* Form Input CSS *********/
/**********************************/
.form-control,
.custom-select {
    width: 100%;
    height: 35px;
    padding: 5px 15px;
    color: #999999;
    border: 1px solid #cccccc;
    margin-bottom: 15px
}

.form-control:focus,
.custom-select:focus {
    box-shadow: none;
    border-color: #FF6F61;
}

.custom-radio,
.custom-checkbox {
    margin-bottom: 15px;
}

.custom-radio .custom-control-label::before,
.custom-checkbox .custom-control-label::before {
    border-color: #cccccc;
}

.custom-radio .custom-control-input:checked~.custom-control-label::before,
.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    color: #ffffff;
    background: #FF6F61;
}

button.btn {
    color: #ffffff;
    background: #000000;
    border: 1px solid #000000;
}

button.btn:hover {
    color: #ffffff;
    background: #FF6F61;
    border-color: #FF6F61;
}


/**********************************/
/*********** Top Bar CSS **********/
/**********************************/
.top-bar {
    padding: 2px 0;
    background: #000000;
}

.top-bar .tb-contact p {
    display: inline-block;
    margin: 0;
    color: #FF6F61;
    font-size: 14px;
}

.top-bar .tb-contact p i {
    margin-right: 6px;
}

.top-bar .tb-contact p:first-child {
    margin-right: 15px;
}

.top-bar .tb-menu {
    font-size: 0;
    text-align: right;
}

.top-bar .tb-menu a {
    color: #FF6F61;
    font-size: 14px;
    margin: 0 8px;
}

.top-bar .tb-menu a:hover {
    color: #ffffff;
}

.top-bar .tb-menu a:last-child {
    margin-right: 0;
}

.top-bar .tb-menu a::after {
    position: absolute;
    content: "/";
    margin: 1px 0 0 6px;
    color: #FF6F61;
    font-size: 14px;
}

.top-bar .tb-menu a:last-child::after {
    display: none;
}

@media (max-width: 768px) {
    .top-bar .tb-contact,
    .top-bar .tb-menu {
        text-align: center;
    }
}


/**********************************/
/*********** Brand CSS ************/
/**********************************/
.brand {
    margin: 15px 0;
    background: #ffffff;
}

.brand .b-logo {
    text-align: left;
    overflow: hidden;
}

.brand .b-logo a img {
    max-width: 100%;
    max-height: 60px;
}

.brand .b-ads {
    overflow: hidden;
}

.brand .b-ads a img {
    max-width: 100%;
    max-height: 100%;
}

.brand .b-search {
    width: 100%;
}

.brand .b-search input[type=text] {
    width: 100%;
    height: 40px;
    padding: 0 15px;
    color: #666666;
    border: 1px solid #cccccc;
    border-radius: 4px;
}

.brand .b-search input[type=text]:focus {
    border-color: #FF6F61;
}

.brand .b-search button {
    position: absolute;
    width: 40px;
    height: 40px;
    top: 0;
    right: 15px;
    border: none;
    background: none;
    color: #FF6F61;
    border-radius: 0 4px 4px 0;
}

.brand .b-search button:hover {
    background: #FF6F61;
    color: #ffffff;
}

@media (min-width: 768px) {
    .brand {
        max-height: 90px;
    }
}

@media (max-width: 767.98px) {
    .brand .b-logo,
    .brand .b-ads,
    .brand .b-search {
        text-align: center;
        margin-bottom: 15px;
    }
    
    .brand .b-search {
        margin-bottom: 0;
    }
}


/**********************************/
/*********** Nav Bar CSS **********/
/**********************************/
.nav-bar {
    position: relative;
}

.nav-bar.nav-sticky {
    position: fixed;
    top: 0;
    width: 100%;
    box-shadow: 0 2px 5px rgba(0, 0, 0, .3);
    z-index: 999;
}

.nav-bar .navbar {
    height: 100%;
    padding: 0;
}

.navbar-dark .navbar-nav .nav-link,
.navbar-dark .navbar-nav .nav-link:focus,
.navbar-dark .navbar-nav .nav-link:hover,
.navbar-dark .navbar-nav .nav-link.active {
    padding: 10px 10px 8px 10px;
    color: #ffffff;
}

.navbar-dark .navbar-nav .nav-link:hover,
.navbar-dark .navbar-nav .nav-link.active {
    border-bottom: 2px solid #000000;
    transition: none;
}

.nav-bar .dropdown-menu {
    margin-top: 0;
    border: 0;
    border-radius: 0;
    background: #f8f9fa;
}

@media (min-width: 768px) {
    .nav-bar,
    .nav-bar .navbar {
        background: #FF6F61 !important;
    }
    
    .nav-bar .navbar-brand {
        display: none;
    }
    
    .nav-bar a.nav-link {
        padding: 8px 15px;
        font-size: 15px;
        text-transform: uppercase;
    }
}

@media (max-width: 768px) {   
    .nav-bar,
    .nav-bar .navbar {
        padding: 3px 0;
        background: #FF6F61 !important;
    }
    
    .nav-bar a.nav-link {
        padding: 5px;
    }
    
    .nav-bar .dropdown-menu {
        box-shadow: none;
    }
    
    .nav-bar .social {
        display: none;
    }
}

.nav-bar .social {
    font-size: 0;
    overflow: hidden;
}

.nav-bar .social a {
    display: inline-block;
    margin-left: 5px;
    width: 30px;
    height: 30px;
    padding: 3px 0;
    text-align: center;
    font-size: 14px;
    background: #FF6F61;
    border: 1px solid #ffffff;
    border-radius: 4px;
}
/* ... */

